Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-98144

Coverity analysis defect 162592: Data race condition

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • RSS Sydney
    • Fully Compatible
    • ALL
    • NamePending - 2025-01-21, MooseOnTheLoose - 2025-02-04, FarewellDaniel - 2025-02-18

      Data race condition

      The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
      /data/bazel_cache/1de52aaeb35278243ca29a4785ce7969/execroot/_main_/src/mongo/db/storage/wiredtiger/wiredtiger_kv_engine.cpp:1400: MISSING_LOCK 162592 Accessing "this->_wtBackup.logFilePathsSeenByGetNextBatch" without holding lock "mongo::WiredTigerBackup.wtBackupCursorMutex". Elsewhere, "mongo::WiredTigerBackup.logFilePathsSeenByGetNextBatch" is written to with "WiredTigerBackup.wtBackupCursorMutex" held 1 out of 1 times.

            Assignee:
            adeline.chen@mongodb.com Adeline Chen
            Reporter:
            xgen-internal-coverity Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: