SERVER-98144 add cursor lock before getting unique files (#32299)

Co-authored-by: Adeline Chen <adeline.chen@mongodb.com>
GitOrigin-RevId: 48bd0d37d1c7e2be0a319ffb59df253403773b91